@@ -18,6 +18,7 @@ usegz=-1
 timeout=180
 unequal_line_error=0
 //cachedir=/home/user/.nget4
+test_multiserver=no
 
 //hostname aliases
 {halias
